--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -166,3 +166,19 @@ eprint = {
   year={1953},
   school={Massachusetts Institute of Technology}
 }
+
+@misc{BenchmarkTools,
+  key = {BenchmarkTools},
+  url = {https://github.com/JuliaCI/BenchmarkTools.jl},
+  urldate = {2018-12-21},
+  year = {n.d.},
+  note = {Accessed 21.12.2018}
+}
+
+@misc{TicToc,
+  key = {Tic},
+  url = {https://uk.mathworks.com/help/matlab/ref/tic.html},
+  urldate = {2018-12-21},
+  year = {n.d.},
+  note = {Accessed 21.12.2018}
+}
