--- a/main.tex
+++ b/main.tex
@@ -4,13 +4,13 @@
 \usepackage{configurations/packages}
 \usepackage{configurations/jlcode}
 \begin{document}
-
+\sloppy
 
 %The document formating starts here
 %================================================================================================================
 %Frontmatter
 \input{frontmatter/frontpage}
-\newpage\null\thispagestyle{empty}\newpage
+% \newpage\null\thispagestyle{empty}\newpage
 
 \setcounter{page}{0}
 \pagenumbering{roman}
