--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,10 +1,8 @@
 %\let\cleardoublepage\clearpage
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
-This project report gives an introduction to what Automatic Differentiation (AD) is and how it can be used to elegantly solve partial differential equations using a finite volume method and a discretization of the gradient- and divergence operator. 
+This project report gives an introduction to what Automatic Differentiation (AD) is and how it can be used to calculate the derivatives of any function as precise as an analytic expression, with very little computational effort. It also gives an introduction on how it can be used to elegantly solve partial differential equations using a finite volume method and a discretization of the gradient- and divergence operator. 
 
-An AD library has been implemented in the programming language Julia and compared to other AD libraries in Julia and MATLAB. For evaluating the function value and Jacobian of a vector function with three input vectors $x$, $y$ and $z$ the implemented AD library performs well. For vectors with length less than 2000 it perform better than all other AD libraries tested. Tests also indicates that the overhead accompanying for-loops is very little in Julia and this opens up possibilities for more efficient implementations than what have been done in this project.
+An AD library has been implemented in the programming language Julia and compared to other AD libraries in Julia and MATLAB. For evaluating the function value and Jacobian of a simple vector function with three input vectors $x$, $y$ and $z$ the implemented AD library performs well. For vectors with length between 50 and 2000 elements it perform better than all other AD libraries tested. Tests also indicates that the overhead accompanying for-loops is very little in Julia and this could open up possibilities for more efficient implementations than what have been done in this project.
 
-The AD library has been used to create a flow solver modelling the flow of oil in a reservoir. Benchmarks shows that the 
-
-\todo[inline]{Se på dette fredag}
+The AD library has also been used to create a flow solver modelling the flow of oil in a reservoir. Benchmarks shows that the AD implementation in Julia is approximately 30 percent slower than the implementation in MATLAB at solving this problem. This result applies for all discretizations tested, even tough for the smallest discretization, the solution vector is inside the length range where the implementation in Julia tested to be the quickest. The results show that, for this example, when the function evaluated is more complex, the implementation in MATLAB handles the calculations better than the current implementation in Julia. 
